# vizbuilder

./: .gitignore  pyproject.toml
examples/notebooks/: gantt_chart.ipynb
src/vizbuilder/: __init__.py
src/vizbuilder/components/: __init__.py  shapes.py
src/vizbuilder/components/assets/: data_display.js  gantt_chart.js  rectangles.js
src/vizbuilder/core/: html_builder.py
