[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vizbuilder"
version = "0.1.0"
description = "Web-based visualizations with Jupyter integration"
authors = [{name = "David Page", email = "d.c.page@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "jupyter",
    "notebook",
    "beautifulsoup4>=4.9.0",
    "ipython>=7.0.0",
    "cssbeautifier",
    "jsbeautifier"
]

examples = [
    "pandas>=1.0.0",    # For example notebooks
    "numpy>=1.20.0",    # For sample data generation
]


[project.urls]
Homepage = "https://github.com/davidcpage/vizbuilder"
Repository = "https://github.com/davidcpage/vizbuilder"
Issues = "https://github.com/davidcpage/vizbuilder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vizbuilder = ["components/assets/*.js"]

[tool.setuptools.package-dir]
"" = "src"